--- a/index.html
+++ b/index.html
@@ -216,6 +216,34 @@
         statusText.textContent += " (Demo audio playing - replace with actual song URL.)";
         return;
       }
+      const commands = {
+    "play music mohammad faiz song": () => {
+      window.open("https://www.youtube.com/results?search_query=Mohammad+Faiz+song", "_blank");
+      speak("Playing Mohammad Faiz songs from YouTube");
+    },
+    "play music": (text) => {
+      let query = text.replace("play music", "").trim();
+      let url = "https://www.youtube.com/results?search_query=" + encodeURIComponent(query || "music");
+      window.open(url, "_blank");
+      speak("Playing " + (query || "music"));
+    },
+    "time": () => {
+      speak("Abhi ka samay hai " + new Date().toLocaleTimeString("en-IN"));
+    },
+    "date": () => {
+      speak("Aaj ki tithi hai " + new Date().toLocaleDateString("en-IN"));
+    },
+    "aaj ka mosam": () => {
+      window.open("https://www.google.com/search?q=weather", "_blank");
+      speak("Here is today's weather update");
+    },
+    "hello": () => {
+      speak("Hello! How are you?");
+    },
+    "what is your name": () => {
+      speak("My name is Nova, your AI voice assistant.");
+    }
+  };
 
       // Unknown command fallback
       speak('Sorry, I did not recognize that command. Please try again.');
