--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         // Example public audio file URL for demo (replace with preferred or local)
         const audio = new Audio('https://youtube.com/@mohammad.faiz_official?si=0hNECPy5dNWxBhZo');
         audio.play();
-        statusText.textContent += " (Demo audio playing - replace with actual song URL.)";
+        statusText.textContent += " (https://youtu.be/MBO5Q_zL3Yg?si=HNUF0ZbS6MXSNWNo)";
         return;
       }
     
