--- a/index.html
+++ b/index.html
@@ -212,13 +212,8 @@
 // Command: play music Mohammad Faiz song
 if (command.includes('play music') && command.includes('mohammad faiz')) {
     speak('Playing Mohammad Faiz song');  
-function handleCommand(command) {
-    command = command.toLowerCase();
-
-    if (command.includes("play music mohammad faiz song")) {
-        // Directly open YouTube link in a new tab
-        window.open("https://youtu.be/MBO5Q_zL3Yg?si=MQD9zo56-9gApTpF", "_blank");
-    }
+window.open('https://youtu.be/MBO5Q_zL3Yg?si=Yqr3tSrGRTRSWoAH',)
+  return;
 }
       
     
